website/tests/snapshots/react/types.exp
=== block 1 ===
No errors!

=== block 2 ===
No errors!

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
No errors!

=== block 9 ===
No errors!

=== block 10 ===
Error --------------------------------------------------------------------------------- -:7:2

Cannot create `Comp` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-type]

   -:7:2
   7| <Comp />; // ERROR: `foo` is required
       ^^^^

References:
   -:7:1
   7| <Comp />; // ERROR: `foo` is required
      ^^^^^^^^ [1]
   -:4:41
   4| declare const Comp: React.ComponentType<{foo: number}>;
                                              ^^^^^^^^^^^^^ [2]


Found 1 error

=== block 11 ===
No errors!

=== block 12 ===
No errors!

=== block 13 ===
No errors!

=== block 14 ===
No errors!

=== block 15 ===
No errors!

=== block 16 ===
No errors!

=== block 17 ===
No errors!

=== block 18 ===
No errors!

=== block 19 ===
No errors!

=== block 20 ===
No errors!

=== block 21 ===
No errors!
